--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "eazydocs"
-version = "24.7.2"
+version = "24.9.26"
 authors = [
     {name="Aric Kraft"},
 ]
@@ -12,12 +12,17 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
 ]
-dependencies = [
-    "pandas>=2.2.1",
-]
+
 description = "An easy way to generate code documentation by cutting down repetitive boilerplate input. With as little as the function name and its parameters, you can generate a markdown file that mixes markdown and html formatting to clearly define your code."
 readme = "README.md"
 requires-python = ">=3.11"
+
+
+[tool.setuptools.packages.find]
+include = ["eazydocs","eazydocs.*"]
+exclude=["*.tests*"]
+namespaces = false
+
 
 [project.urls]
 Homepage = "https://github.com/aeazy/eazydocs"
